# coin_cbc

./: .gitignore  Cargo.toml  Cross.toml  README.md
.github/workflows/: rust.yml
coin_cbc_sys/: Cargo.toml  build.rs  wrapper.h
coin_cbc_sys/src/: lib.rs
examples/: knapsack.rs
src/: lib.rs  raw.rs  sos_constraints.rs
