[package]
name = "coin_cbc"
version = "0.1.3"
authors = ["Kardinal <guillaume.pinot@kardinal.ai>"]
edition = "2018"
description = "Rust bindings to the CoinOR CBC MILP Solveur using the C API."
documentation = "https://docs.rs/coin_cbc"
repository = "https://github.com/KardinalAI/coin_cbc"
keywords = ["MILP", "MIP", "linear-programming"]
categories = ["api-bindings", "mathematics", "science"]
license = "MIT "
readme = "README.md"

[workspace]
members = ["coin_cbc_sys"]

[dependencies]
coin_cbc_sys = { version = "0.1", path = "coin_cbc_sys" }
